--- a/webservice/api-docs.html
+++ b/webservice/api-docs.html
@@ -1,12 +1,14 @@
 <!doctype html> <!-- Important: must specify -->
 <html>
+
 <head>
   <meta charset="utf-8"> <!-- Important: rapi-doc uses utf8 charecters -->
   <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 </head>
+
 <body>
-  <rapi-doc 
-    spec-url="https://raw.githubusercontent.com/korpling/graphANNIS/master/webservice/src/openapi.yml" 
-  > </rapi-doc>
-</body> 
+  <rapi-doc spec-url="https://raw.githubusercontent.com/korpling/graphANNIS/main/webservice/src/openapi.yml">
+  </rapi-doc>
+</body>
+
 </html>
