Update license information

--- a/third-party-licenses.html
+++ b/third-party-licenses.html
@@ -47,7 +47,7 @@
         <h2>Overview of licenses:</h2>
         <ul class="licenses-overview">
             <li><a href="#Apache-2.0">Apache License 2.0</a> (57)</li>
-            <li><a href="#MIT">MIT License</a> (55)</li>
+            <li><a href="#MIT">MIT License</a> (56)</li>
             <li><a href="#BSD-3-Clause">BSD 3-Clause &quot;New&quot; or &quot;Revised&quot; License</a> (9)</li>
             <li><a href="#ISC">ISC License</a> (4)</li>
             <li><a href="#BSL-1.0">Boost Software License 1.0</a> (1)</li>
@@ -3229,6 +3229,7 @@ limitations under the License.</pre>
                     <li><a href=" https://github.com/srijs/rust-crc32fast ">crc32fast 1.3.2</a></li>
                     <li><a href=" https://github.com/bluejekyll/enum-as-inner ">enum-as-inner 0.3.4</a></li>
                     <li><a href=" https://github.com/tailhook/humantime ">humantime 2.1.0</a></li>
+                    <li><a href=" https://github.com/rust-pretty-assertions/rust-pretty-assertions ">pretty_assertions 1.3.0</a></li>
                     <li><a href=" http://github.com/tailhook/quick-error ">quick-error 1.2.3</a></li>
                     <li><a href=" https://github.com/sfackler/r2d2 ">r2d2 0.8.10</a></li>
                     <li><a href=" http://github.com/tailhook/resolv-conf ">resolv-conf 0.7.0</a></li>
@@ -4234,6 +4235,7 @@ TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION
                 <ul class="license-used-by">
                     <li><a href=" https://github.com/dtolnay/anyhow ">anyhow 1.0.69</a></li>
                     <li><a href=" https://github.com/dtolnay/async-trait ">async-trait 0.1.64</a></li>
+                    <li><a href=" https://github.com/dtolnay/cxx ">cxx 1.0.90</a></li>
                     <li><a href=" https://github.com/dtolnay/cxx ">cxx-build 1.0.90</a></li>
                     <li><a href=" https://github.com/dtolnay/cxx ">cxxbridge-flags 1.0.90</a></li>
                     <li><a href=" https://github.com/dtolnay/cxx ">cxxbridge-macro 1.0.90</a></li>
@@ -7493,6 +7495,7 @@ limitations under the License.</pre>
                     <li><a href=" https://github.com/rustwasm/wasm-bindgen/tree/master/crates/macro-support ">wasm-bindgen-macro-support 0.2.84</a></li>
                     <li><a href=" https://github.com/rustwasm/wasm-bindgen/tree/master/crates/shared ">wasm-bindgen-shared 0.2.84</a></li>
                     <li><a href=" https://github.com/rustwasm/wasm-bindgen/tree/master/crates/web-sys ">web-sys 0.3.61</a></li>
+                    <li><a href=" https://github.com/SergioBenitez/yansi ">yansi 0.5.1</a></li>
                 </ul>
                 <pre class="license-text">                              Apache License
                         Version 2.0, January 2004
@@ -10017,6 +10020,7 @@ additional terms or conditions.
                 <h3 id="Apache-2.0">Apache License 2.0</h3>
                 <h4>Used by:</h4>
                 <ul class="license-used-by">
+                    <li><a href=" https://github.com/mmastrac/rust-ctor ">ctor 0.1.26</a></li>
                     <li><a href=" https://github.com/thomaskrause/transient-btree-index ">transient-btree-index 0.5.0</a></li>
                 </ul>
                 <pre class="license-text">Apache License
@@ -10444,11 +10448,11 @@ limitations under the License.
                     <li><a href=" https://github.com/diesel-rs/diesel/tree/master/diesel_derives ">diesel_derives 1.4.1</a></li>
                     <li><a href=" https://crates.io/crates/diesel_migrations ">diesel_migrations 1.4.0</a></li>
                     <li><a href=" https://github.com/cbreeden/fxhash ">fxhash 0.2.1</a></li>
-                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis 2.4.2</a></li>
-                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-capi 2.4.2</a></li>
-                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-cli 2.4.2</a></li>
-                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-core 2.4.2</a></li>
-                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-webservice 2.4.2</a></li>
+                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis 2.4.3</a></li>
+                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-capi 2.4.3</a></li>
+                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-cli 2.4.3</a></li>
+                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-core 2.4.3</a></li>
+                    <li><a href=" https://github.com/korpling/graphANNIS ">graphannis-webservice 2.4.3</a></li>
                     <li><a href=" https://github.com/starkat99/half-rs ">half 1.8.2</a></li>
                     <li><a href=" https://github.com/lalrpop/lalrpop ">lalrpop 0.19.8</a></li>
                     <li><a href=" https://github.com/lalrpop/lalrpop ">lalrpop-util 0.19.8</a></li>
@@ -10563,6 +10567,7 @@ limitations under the License.
                 <h4>Used by:</h4>
                 <ul class="license-used-by">
                     <li><a href=" https://github.com/unicode-rs/unicode-normalization ">unicode-normalization 0.1.22</a></li>
+                    <li><a href=" https://github.com/unicode-rs/unicode-segmentation ">unicode-segmentation 1.10.1</a></li>
                     <li><a href=" https://github.com/unicode-rs/unicode-width ">unicode-width 0.1.10</a></li>
                     <li><a href=" https://github.com/unicode-rs/unicode-xid ">unicode-xid 0.1.0</a></li>
                     <li><a href=" https://github.com/unicode-rs/unicode-xid ">unicode-xid 0.2.4</a></li>
@@ -10589,6 +10594,7 @@ according to those terms.
                 <h4>Used by:</h4>
                 <ul class="license-used-by">
                     <li><a href=" https://github.com/gyscos/zstd-rs ">zstd-safe 5.0.2+zstd.1.5.2</a></li>
+                    <li><a href=" https://github.com/gyscos/zstd-rs ">zstd-sys 2.0.7+zstd.1.5.4</a></li>
                 </ul>
                 <pre class="license-text">MIT or Apache-2.0
 </pre>
@@ -12707,6 +12713,35 @@ SOFTWARE.
                 <h3 id="MIT">MIT License</h3>
                 <h4>Used by:</h4>
                 <ul class="license-used-by">
+                    <li><a href=" https://github.com/Phundrak/output-vt100-rs ">output_vt100 0.1.3</a></li>
+                </ul>
+                <pre class="license-text">The MIT License (MIT)
+
+Copyright (c) 2016 rust-derive-builder contributors
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the &quot;Software&quot;), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED &quot;AS IS&quot;, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+</pre>
+            </li>
+            <li class="license">
+                <h3 id="MIT">MIT License</h3>
+                <h4>Used by:</h4>
+                <ul class="license-used-by">
                     <li><a href=" https://github.com/BurntSushi/same-file ">same-file 1.0.6</a></li>
                     <li><a href=" https://github.com/BurntSushi/winapi-util ">winapi-util 0.1.5</a></li>
                 </ul>
@@ -12956,6 +12991,7 @@ SOFTWARE.</pre>
                 <ul class="license-used-by">
                     <li><a href=" https://github.com/BurntSushi/aho-corasick ">aho-corasick 0.7.20</a></li>
                     <li><a href=" https://github.com/BurntSushi/byteorder ">byteorder 1.4.3</a></li>
+                    <li><a href=" https://github.com/BurntSushi/rust-csv ">csv 1.2.0</a></li>
                     <li><a href=" https://github.com/BurntSushi/rust-csv ">csv-core 0.1.10</a></li>
                     <li><a href=" https://github.com/BurntSushi/memchr ">memchr 2.5.0</a></li>
                     <li><a href=" https://github.com/BurntSushi/same-file ">same-file 1.0.6</a></li>
